# TienKungLite-Lab

./: .gitignore  README.md  RESOURCE_PIPELINE.md  debug_signals.py  eval_stand_real_lite.py  eval_walk_real_lite.py  play_real_lite.py  pyproject.toml  sim2sim_real_lite.py  train_real_lite.py
mjcf/: real_lite.xml
real_lite_lab/: __init__.py  actuator_scale_overrides.py  alignment_config.py  base_config.py  cli_args.py  constants.py  env.py  isaaclab_compat.py  joint_order.py  mdp.py  mjcf_contact_variants.py  mjcf_mesh_fallback.py  motion_files.py  mujoco_standing_diagnostics.py  mujoco_state_init.py  reference_tienkung2_lite.py  registry.py  render_camera.py  rewards.py  run_cfg.py  runtime_paths.py  scene.py  sensor_cfgs.py  sim_cleanup.py  stand_cfg.py  standing_pose_overrides.py  task_registry.py  terrain_cfg.py  upper_body_cfg.py  usd_asset_validation.py  walk_cfg.py  walk_forward_cfg.py
rsl_rl/: pyproject.toml
rsl_rl/rsl_rl/runners/: amp_on_policy_runner.py  on_policy_runner.py
rsl_rl/rsl_rl/utils/: __init__.py  cleanup.py  motion_loader.py  motion_loader_for_display.py
scripts/: gmr_data_conversion.py  play_amp_animation.py  server_resource_pipeline.sh
tests/: test_actuator_scale_overrides.py  test_align_real_lite_urdf_to_reference.py  test_analyze_isaac_standing_trace.py  test_analyze_sim2sim_trace.py  test_asset_root_resolution.py  test_audit_real_lite_resource_pipeline.py  test_cli_args.py  test_debug_signals.py  test_generate_real_lite_mjcf.py  test_gmr_data_conversion.py  test_headless_overrides.py  test_isaac_standing_diagnostic.py  (+19 more)
(+51 files in other folders)
