[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "TienKungLiteLab"
version = "0.1.0"
description = "Independent Isaac Lab training pipeline for the TienKung Lite humanoid robot"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "onnx",
]

[tool.setuptools.packages.find]
include = ["real_lite_lab*"]
