[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rsl-rl-lib"
version = "2.3.1"
description = "Fast and simple RL algorithms implemented in PyTorch (Real Lite fork)"
requires-python = ">=3.8"
dependencies = [
    "torch>=1.10.0",
    "torchvision>=0.5.0",
    "numpy>=1.16.4",
    "GitPython",
    "onnx",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["rsl_rl*"]
